--- a/sass/blocks/_packages.sass
+++ b/sass/blocks/_packages.sass
@@ -87,13 +87,15 @@
       margin-top: 0
       margin-bottom: 23px
   &__info
-    min-height: 160px
+    width: 300px
+    height: 160px
     font-style: normal
     font-weight: normal
     font-size: 14px
     line-height: 160.6%
     margin-top: 0
     margin-bottom: 34px
+    overflow: auto
   &__room
     min-height: 67px
     margin-left: 2px
@@ -159,3 +161,15 @@
     display: flex
     align-items: center
     margin-bottom: 11px
+
+#element::-webkit-scrollbar
+  width: 4px
+
+#element::-webkit-scrollbar-track 
+  -webkit-box-shadow: 5px 5px 5px -5px rgba(34, 60, 80, 0.2) inset
+  background-color: #f9f9fd
+  border-radius: 10px
+
+#element::-webkit-scrollbar-thumb 
+  border-radius: 10px
+  background: linear-gradient(180deg, #00c6fb, #005bea)
