--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -42,6 +42,12 @@
   .footer
     &-wrapper
       grid-template-columns: 235px 235px 295px 195px
+    &__contact
+      &-details
+        max-width: 430px
+    &__item
+      max-width: 430px
+      display: -webkit-box
 @media (max-width: 992px)
   .container, 
   .newsletter-wrapper
@@ -111,7 +117,7 @@
   .footer
     &-wrapper
       grid-template-columns: 186px 14px 298px 202px
-      grid-template-rows: 159px 279px 305px 380px 22px 
+      grid-template-rows: 159px 279px 331px 380px 22px 
       padding: 73px 0 33px 0
     &__logo
       margin-top: 0
@@ -238,7 +244,7 @@
   .footer
     &-wrapper
       grid-template-columns: 1fr
-      grid-template-rows: 150px 97px 157px 201px 258px 296px 416px 25px 22px
+      grid-template-rows: 150px 97px 157px 201px 258px 356px 416px 25px 22px
       padding: 69px 0 33px 0
       row-gap: 0
     &__logo
@@ -286,7 +292,7 @@
       width: 100%
 @media (max-width: 576px) 
   body
-    padding-top: 80px
+    padding-top: 70px
   .navbar
     &--mobile
       &-fixed
@@ -321,7 +327,8 @@
             display: block
   .navbar
     &-top
-      padding: 28px 0 28.58px
+      padding: 23px 0 28.58px
+      max-height: 70px
   .menu
     &-button
       display: flex
@@ -350,11 +357,15 @@
     max-width: 280px
   .logo
     width: 99px
+  .stars
+    margin-right: 17px
   .hotel
-    padding-top: 8px
+    padding-top: 1px
     padding-bottom: 20px
     &-slider
       height: 179px
+    &__header
+      margin-bottom: 39px
   .hotel
     &__slider
       margin-bottom: 20px
