--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -2,6 +2,10 @@
   .button
     &:hover
       background-color: #630700
+  .search
+    &__button
+      &:hover
+        background-color: #630700
   a
     &:hover
       color: #adfffb
@@ -290,6 +294,9 @@
     &__button
       margin-bottom: 15px
       width: 100%
+  .up
+    width: 40px
+    height: 40px
 @media (max-width: 576px) 
   body
     padding-top: 70px
@@ -313,7 +320,7 @@
       left: 0
       right: 0
       bottom: 0
-      top: 78px
+      top: 70px
       padding-top: 31px
       &--visible
         display: block
